Add angle y label

--- a/bode-plot.tex
+++ b/bode-plot.tex
@@ -54,6 +54,8 @@
 				axis line style={latex-latex},
 				xlabel={$\omega$[\si[per-mode=fraction]{\radian\per\second}]},
 				xlabel style={at={(ticklabel* cs:1,8)},anchor=north},
+				ylabel={$\angle$},
+				ylabel style={rotate=-90,at={(ticklabel* cs:1)},anchor=south},
 				xmin=1e-3,xmax=1e4,
 				ymin=-180,ymax=180,
 				enlarge y limits=0.025,
